Moving moldLibrary to package-settings [wip]

--- a/Editor/QuickEye.BakingTools.asmdef
+++ b/Editor/QuickEye.BakingTools.asmdef
@@ -1,6 +1,8 @@
 {
     "name": "QuickEye.BakingTools",
-    "references": [],
+    "references": [
+        "GUID:49818357e697641afb75d2f8acaf1861"
+    ],
     "includePlatforms": [
         "Editor"
     ],
